# pathtrace-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  callgrind.out.22354  callgrind.out.23409
src/: bench.rs  bvh.rs  camera.rs  collision.rs  glium_window.rs  main.rs  material.rs  math.rs  offline.rs  params.rs  perlin.rs  presets.rs  rand.rs  scene.rs  simd.rs  storage.rs  texture.rs  vmath.rs
src/collision/: aabb.rs  bvh.rs  constant_medium.rs  cuboid.rs  hitable.rs  hitable_list.rs  instance.rs  moving_sphere.rs  ray.rs  rect.rs  sphere.rs  spheres_soa.rs
