[package]
name = "pathtrace-rs"
version = "0.1.2"
authors = ["Cameron Hart <cameron.hart@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "~1.2"
glam = "0.14"
# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"
typed-arena = "~1.6"

[features]
core_intrinsics = []
bench = []

[dependencies.glium]
version = "~0.25"
features = ["glutin"]
default-features = false

[dependencies.clap]
version = "~2.33"
default-features = false

[dependencies.image]
version = "~0.22"
default-features = false
features = ["png_codec", "jpeg", "jpeg_rayon"]

[profile.dev]
opt-level = 3

[profile.release]
debug = true
# lto = true

# [patch.crates-io]
# glam = { path = "../glam-rs" }
